# OpenPype

./: .all-contributorsrc  .cz.toml  .dockerignore  .editorconfig  .flake8  .gitattributes  .github_changelog_generator  .gitignore  .gitlab-ci.yml  .gitmodules  .hound.yml  .pre-commit-config.yaml  .rnd  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.centos7  Dockerfile.debian  HISTORY.md  LICENSE  README.md  __main__.py  action.py  app_launcher.c  app_launcher.py  ayon_start.py  build.ps1  build.sh  changelog.md  cli.py  colorbleed.bat  configuration.json  conftest.py  dev_mongo.ps1  dev_settings.ps1  dev_tray.ps1  inno_setup.iss  (+18 more)
.circleci/: config.yml
.github/: pr-branch-labeler.yml  pr-glob-labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  enhancement_request.yml
.github/PULL_REQUEST_TEMPLATE/: feature-tempate.md
.github/workflows/: auto_community_labeler.yml  automate-projects.yml  configuration.json  documentation.yml  linting_pr.yml  main.yml  milestone_assign.yml  milestone_create.yml  miletone_release_trigger.yml  nightly_merge.yml  patch_build.yml  pr_labels.yml  pr_linting.yml  prerelease.yml  project_actions.yml  project_task_statuses.yml  pull_request.yml  python-app.yml  release.yml  sync_fork.yml  test_build.yml  update-deadline-plugin.yml  update_bug_report.yml
.trunk/: out
colorbleed/: __init__.py  action.py  api.py  config_actions.py  filetypes.py  launcher_actions.py  lib.py  manager_actions.py  plugin.py  setdress_api.py
colorbleed/fusion/: __init__.py  lib.py  rendernode.py
colorbleed/houdini/: __init__.py  lib.py
colorbleed/maya/: __init__.py  commands.py  customize.py  interactive.py  lib.py  menu.json  menu.py  plugin.py
colorbleed/scripts/: fusion_switch_shot.py  publish_filesequence.py  publish_imagesequence.py  slapcomp_switch.py
colorbleed/widgets/: popup.py
common/ayon_common/: __init__.py  ui_utils.py  utils.py
config/: action.py  api.py  lib.py  setdress_api.py
config/maya/: __init__.py  lib.py  menu.json  menu.py
config/nuke/: __init__.py  lib.py
config/scripts/: fusion_switch_shot.py
distribution/: addon_distribution.py  file_handler.py
distribution/dependencies/: dependencies.py
distribution/dependencies/tests/resources/: pyproject.toml
distribution/tests/: test_addon_distributtion.py
docs/: README.md  make.bat
docs/source/: conf.py  igniter.bootstrap_repos.rst  igniter.install_dialog.rst  igniter.install_thread.rst  igniter.rst  igniter.tools.rst  index.rst  modules.rst  pype.action.rst  pype.api.rst  pype.aport.rst  pype.avalon_apps.rst  pype.cli.rst  pype.clockify.rst  pype.ftrack.ftrack_server.rst  pype.ftrack.lib.rst  pype.ftrack.rst  pype.fusion.rst  pype.fusion.scripts.rst  pype.hosts.aftereffects.rst  pype.hosts.blender.action.rst  pype.hosts.blender.plugin.rst  pype.hosts.blender.rst  pype.hosts.celaction.cli.rst  pype.hosts.celaction.rst  pype.hosts.fusion.lib.rst  pype.hosts.fusion.menu.rst  pype.hosts.fusion.pipeline.rst  pype.hosts.fusion.rst  pype.hosts.fusion.scripts.duplicate_with_inputs.rst  pype.hosts.fusion.scripts.fusion_switch_shot.rst  pype.hosts.fusion.scripts.rst  pype.hosts.fusion.scripts.set_rendermode.rst  pype.hosts.fusion.utils.rst  pype.hosts.harmony.rst  pype.hosts.hiero.events.rst  pype.hosts.hiero.lib.rst  pype.hosts.hiero.menu.rst  pype.hosts.hiero.rst  pype.hosts.hiero.tags.rst  (+470 more)
hooks/: pre_create_extra_workdir_folders.py  pre_mac_launch.py
hosts/blender/: __init__.py
hosts/flame/: __init__.py
hosts/harmony/: __init__.py
hosts/hiero/: __init__.py
hosts/maya/: lib.py
igniter/: .ass  __init__.py  __main__.py  bootstrap_repos.py  install_dialog.py  install_thread.py  message_dialog.py  nice_progress_bar.py  openpype.icns  stylesheet.css  terminal_splash.py  tools.py  update_thread.py  update_window.py  user_settings.py  version.py
igniter/GPUCache/: data_1  index
openpype/: __init__.py  action.py  api.py  cli.py  click_wrap.py  launcher_actions.py  plugin.py  pype_commands.py  version.py
openpype/hosts/tvpaint/tvpaint_plugin/plugin_code/: CMakeLists.txt  README.md  library.cpp  library.def
pype/: __init__.py  action.py  api.py  avalon_mongodb.py  cli.py  config.py  launcher_actions.py  lib.py  modules_manager.py  mongodb.py  plugin.py  pype_commands.py  setdress_api.py  templates.py  version.py
res/: workspace.mel
schema/: application-1.0.json  asset-1.0.json  asset-2.0.json  asset-3.0.json  config-1.0.json  config-1.1.json  config-2.0.json  container-1.0.json  container-2.0.json  hero_version-1.0.json  inventory-1.0.json  inventory-1.1.json  master_version-1.0.json  project-2.0.json  project-2.1.json  project-3.0.json  representation-1.0.json  representation-2.0.json  session-1.0.json  session-2.0.json  session-3.0.json  shaders-1.0.json  subset-1.0.json  subset-2.0.json  subset-3.0.json  thumbnail-1.0.json  version-1.0.json  version-2.0.json  version-3.0.json  workfile-1.0.json
server_addon/: README.md  create_ayon_addon.py  create_ayon_addons.py  create_ayon_rez_addons.py  pyproject.toml
server_addon/openpype/client/: pyproject.toml
tests/: README.md  __init__.py  conftest.py
tools/: backup_mongo_data.py  build.ps1  build.sh  build_dependencies.py  build_win_installer.ps1  ci_tools.py  create_env.ps1  create_env.sh  create_zip.ps1  create_zip.py  create_zip.sh  docker_build.ps1  docker_build.sh  fetch_thirdparty_libs.ps1  fetch_thirdparty_libs.py  fetch_thirdparty_libs.sh  get_python_packages_info.py  hornet_develop.ps1  local_eventserver.cmd  make_docs.ps1  make_docs.sh  openpype_console.bat  pack_project.ps1  parse_pyproject.py  refresh_traits.ps1  run_documentation.ps1  run_ftrack_eventserver.ps1  run_ftrack_eventserver.sh  run_mongo.ps1  run_mongo.sh  run_mongo_backup.ps1  run_project_manager.ps1  run_projectmanager.sh  run_publish_report_viewer.ps1  run_settings.ps1  run_settings.sh  run_tests.bat  run_tests.ps1  run_tests.sh  run_tray.ps1  (+10 more)
website/: README.md  docusaurus.config.js  package.json  publish.cmd  sidebars.js
(+7847 files in other folders)
