[tool.poetry]
name = "AYON"
version = "0.0.1"
description = "Open VFX and Animation pipeline with support."
authors = ["Ynput s.r.o. <info@openpype.io>"]
license = "MIT License"
homepage = "https://ynput.io"
documentation = "https://ayon.ynput.io"
repository = "https://github.com/ynput/OpenPype"
readme = "README.md"
keywords = ["Pipeline", "Avalon", "VFX", "animation", "automation", "tracking", "asset management"]
packages = [
    {include = "tools"},
    {include = "start.py"},
    {include = "LICENSE"},
    {include = "README.md"},
    {include = "setup.py"},
    {include = "pyproject.toml"},
    {include = "poetry.lock"}
]

[tool.poetry.scripts]
azon = 'start:boot'

[tool.poetry.dependencies]
ayon-python-api = "*"
python = ">=3.9.1,<3.10"
aiohttp = "^3.7"
acre = { git = "https://github.com/pypeclub/acre.git" }
appdirs = { git = "https://github.com/ActiveState/appdirs.git", branch = "master" }
blessed = "^1.17" # terminal formatting
coolname = "*"
Click = "^8"
# dnspython = "^2.1.0"
arrow = "^0.17"
keyring = "^22.0.1"
QtPy = "^2.3.0"
six = "^1.15"
semver = "^2.13.0" # for version resolution
pywin32 = { version = "301", markers = "sys_platform == 'win32'" }
python3-xlib = { version="*", markers = "sys_platform == 'linux'"}
enlighten = "^1.9.0"
Unidecode = "1.2.0"
cryptography = "39.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0"
autopep8 = "^2.0"
coverage = "*"
cx_freeze = "6.12.0"
GitPython = "^3.1.17"
jedi = "^0.13"
Jinja2 = "^3"
markupsafe = "2.0.1"
pycodestyle = "*"
pydocstyle = "*"
linkify-it-py = "^2.0.0"
myst-parser = "^0.18.1"
pylint = "^2.4.4"
pytest = "^6.1"
pytest-cov = "*"
pytest-print = "*"
wheel = "*"
enlighten = "*"  # cool terminal progress bars
toml = "^0.10.2" # for parsing pyproject.toml
pre-commit = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ynput/OpenPype/issues"
"Discussions" = "https://github.com/ynput/OpenPype/discussions"

[[tool.poetry.source]]
name = "ayon"
url = "https://distribute.openpype.io/wheels/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[ayon]
# note: in here we can use pip version specifiers as this is installed with pip until
# Poetry will support custom location (-t flag for pip)
# https://pip.pypa.io/en/stable/cli/pip_install/#requirement-specifiers
[ayon.qtbinding.windows]
package = "PySide2"
version = "5.15.2"

[ayon.qtbinding.darwin]
package = "PySide6"
version = "6.4.3"

[ayon.qtbinding.linux]
package = "PySide2"
version = "5.15.2"

[tool.pyright]
include = [
    "vendor"
]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
ignore = [".git"]

reportMissingImports = true
reportMissingTypeStubs = false
