[project]
name="openpype"
description="OpenPype addon for AYON server."

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"
aiohttp_json_rpc = "*" # TVPaint server
aiohttp-middlewares = "^2.0.0"
wsrpc_aiohttp = "^3.1.1" # websocket server
clique = "1.6.*"
shotgun_api3 = {git = "https://github.com/shotgunsoftware/python-api.git", rev = "v3.3.3"}
gazu = "^0.9.3"
google-api-python-client = "^1.12.8" # sync server google support (should be separate?)
jsonschema = "^2.6.0"
pymongo = "^3.11.2"
log4mongo = "^1.7"
pathlib2= "^2.3.5" # deadline submit publish job only (single place, maybe not needed?)
pyblish-base = "^1.8.11"
pynput = "^1.7.2" # Timers manager - TODO replace
"Qt.py" = "^1.3.3"
qtawesome = "0.7.3"
speedcopy = "^2.1"
slack-sdk = "^3.6.0"
pysftp = "^0.2.9"
dropbox = "^11.20.0"
