[project]
name="openpype"
description="OpenPype addon for AYON server."

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"
aiohttp_json_rpc = "*" # TVPaint server
aiohttp-middlewares = "^2.0.0"
wsrpc_aiohttp = "^3.1.1" # websocket server
Click = "^8"
clique = "1.6.*"
jsonschema = "^2.6.0"
pymongo = "^3.11.2"
log4mongo = "^1.7"
pyblish-base = "^1.8.11"
pynput = "^1.7.2" # Timers manager - TODO remove
speedcopy = "^2.1"
six = "^1.15"
qtawesome = "0.7.3"

[ayon.runtimeDependencies]
OpenTimelineIO = "0.14.1"
opencolorio = "2.2.1"
Pillow = "9.5.0"
